...
            "state": "translated",
            "value": "邀请朋友；你们都可以向同一项目添加照片，并一起查看之前的照片"
          }
        }
      }
    },
    "Ayarlar": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الإعدادات"
          }
...
            "state": "translated",
            "value": "选择其他项目"
          }
        }
      }
    },
    "Başla": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "ابدأ"
          }
...
            "state": "translated",
            "value": "Flapse"
          }
        }
      }
    },
    "Flapse Pro": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "Flapse Pro"
          }
...
            "state": "translated",
            "value": "已就绪 — 别忘了存储"
          }
        }
      }
    },
    "Henüz kayıtlı timelapse yok": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "لا يوجد تايم لابس محفوظ بعد"
          }
...
            "state": "translated",
            "value": "还没有已存的延时视频"
          }
        }
      }
    },
    "Henüz çekim yok": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "لا توجد صور بعد"
          }
...
            "state": "translated",
            "value": "删除照片"
          }
        }
      }
    },
    "Karşılama ekranını göster": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "عرض شاشة الترحيب"
          }
...
            "state": "translated",
            "value": "已添加到“已存”"
          }
        }
      }
    },
    "Kaydet": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "حفظ"
          }
...
            "state": "translated",
            "value": "恢复购买"
          }
        }
      }
    },
    "Saç & Sakal": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الشعر واللحية"
          }
...
